# chickenz

./: .dockerignore  .env.sample  .gitignore  .npmrc  ARCHITECTURE.md  CLAUDE.md  DEV_ROADMAP.md  Dockerfile  MULTIPLAYER.md  PROTOCOL.md  README.md  SIM_SPEC.md  TRANSCRIPT.md  ZK_SETTLEMENT.md  fly.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/public/: gun-editor.html
apps/client/src/: game.ts  main.ts  stellar.ts  transcript.ts  wasm.ts
apps/client/src/audio/: sfx.ts
apps/client/src/input/: InputManager.ts
apps/client/src/net/: InputBuffer.ts  InterpolationBuffer.ts  NetworkManager.ts  PredictionManager.ts
apps/client/src/scenes/: GameScene.ts
contracts/chickenz/: Cargo.toml
contracts/chickenz/src/: lib.rs  test.rs
scripts/: deploy.sh  prove.sh  settle.sh  start-match.sh  worker.sh
services/prover/: BOUNDLESS_INTEGRATION.md  Cargo.toml
services/prover/chunk-guest/: Cargo.toml
services/prover/chunk-guest/src/: main.rs
services/prover/core/: Cargo.toml
services/prover/core/examples/: gen-transcript.rs
services/prover/core/src/: constants.rs  fp.rs  hash.rs  init.rs  lib.rs  physics.rs  prng.rs  projectiles.rs  step.rs  types.rs  weapons.rs
services/prover/guest/: Cargo.toml
services/prover/guest/src/: main.rs
services/prover/host/: Cargo.toml
services/prover/host/src/: main.rs
services/prover/match-guest/: Cargo.toml
services/prover/match-guest/src/: main.rs
services/prover/methods/: Cargo.toml
services/prover/wasm/: Cargo.toml
services/prover/wasm/src/: lib.rs
services/server/: package.json
services/server/src/: BotAI.ts  GameRoom.ts  TournamentRoom.ts  db.ts  elo.ts  index.ts  protocol.ts  prover.ts  stellar.ts  wasm.ts
