[package]
name = "chickenz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0", default-features = false }

[dev-dependencies]
serde_json = "1"

[[example]]
name = "gen-transcript"
required-features = []
