[package]
name = "chickenz-host"
version = "0.1.0"
edition = "2021"

[dependencies]
chickenz-core = { path = "../core" }
chickenz-methods = { path = "../methods" }
risc0-zkvm = { version = "3.0", features = ["prove", "metal"] }
serde = { workspace = true }
serde_json = "1"
hex = "0.4"

# Boundless remote proving (optional — only needed with --features boundless)
boundless-market = { version = "1.3", optional = true }
alloy = { version = "1.0", features = ["signers", "signer-local"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
url = { version = "2.5", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = []
boundless = ["dep:boundless-market", "dep:alloy", "dep:tokio", "dep:url", "dep:anyhow"]
